2005-09-26  Derek Price  <derek@ximbiot.com>

	* NEWS: Note fsync'd commits.

2005-09-24  Derek Price  <derek@ximbiot.com>

	* NEWS, HACKING: Standardize on Automake 1.9.6.

2005-09-22  Derek Price  <derek@ximbiot.com>

	* NEWS: Mention conflict fixes.

2005-09-13  Derek Price  <derek@ximbiot.com>

	* TESTS: Mention new $username8 & $anyusername variables.

2005-09-04  Larry Jones  <lawrence.jones@ugs.com>

	* NEWS: s/bug-cvs@gnu.org/bug-cvs@nongnu.org/.
	* configure.in: s/info-cvs@gnu.org/info-cvs@nongnu.org/.
	* configure: Regenerated.

2005-09-01  Derek Price  <derek@ximbiot.com>

	* AUTHORS, DEVEL-CVS, HACKING, README: Update links, email addresses,
	& mailing list descriptions.

2005-09-01  Derek Price  <derek@ximbiot.com>

	* FAQ: Update links.

2005-09-01  Derek Price  <derek@ximbiot.com>

	* HACKING, INSTALL, README, README.VMS, configure.in: Update links and
	email addresses.

2005-08-31  Derek Price  <derek@ximbiot.com>

	* www/.htaccess: Remove this file.

2005-08-31  Derek Price  <derek@ximbiot.com>

	* cvs.spec.in: Note last spec file change in internal ChangeLog.

2005-08-31  Derek Price  <derek@ximbiot.com>

	* NEWS: Note spec file repair.

2005-08-31  Derek Price  <derek@ximbiot.com>

	* cvs.spec.in: Update links to point to Savannah.  s/Copyright/License/
	for RPM 4.mumble.

2005-08-30  Larry Jones  <lawrence.jones@ugs.com>

	* NEWS: Note import locking fix.

2005-07-12  Derek Price  <derek@ximbiot.com>

	* FAQ, HACKING, INSTALL: Add copyright notices.

2005-07-11  Derek Price  <derek@ximbiot.com>

	* FAQ, HACKING, INSTALL: Update license notices.

2005-06-02  Derek Price  <derek@ximbiot.com>

	* NEWS: Note server compression hang fix.

2005-06-01  Conrad T. Pino  <Conrad@Pino.com>

	* makewin32.cmd: Add Windows NT command file to build CVS Project.
	  Imported from revision 1.2 on feature branch.

2005-05-27  Derek Price  <derek@ximbiot.com>

	* NEWS: Note diff space split fix.
	* BUGS: Remove diff space split note.
